Fixed position of play icon on small screen.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -56,13 +56,18 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
     width:  2.5em;
     height: 1.9em;
     left: 50%;
-    top:  70%;
+    top:  50%;
     margin-left: -1.25em;
     margin-top:  -0.95em;
     border-radius: 0.3em;
     color: #FFF;
     background: rgba(0,0,0,0.7) url(../img/play.svg) no-repeat scroll center center;
     background-size: 1.1em;
+}
+@media(min-width: 768px) {
+  .thumbnail-columns .video:after {
+    top: 70%;
+  }
 }
 .thumbnail-columns a:hover .video:after {
     background-color: rgba(0,0,0,0.9);
